fix background so it covers everything more consistently

--- a/lahendus/login/resources/css/easy-login.css
+++ b/lahendus/login/resources/css/easy-login.css
@@ -3,6 +3,11 @@
 .login-pf body {
 	background: url(../img/bg.svg) no-repeat center center fixed;
 	background-size: cover;
+	height: auto;
+}
+
+.login-pf-page {
+	margin-bottom: 40px;
 }
 
 .login-pf-page .card-pf {
